[package]
name = "stylometry"
version = "0.1.0"
edition = "2021"
authors = ["Ian Goodale"]
description = "A package to perform stylometry operations."
readme = "README.md"
repository = "https://github.com/ian-nai/rust_stylometry"
license = "GPL-3.0-or-later"
keywords = ["NLP", "stylometry"]
categories = ["text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unicode-segmentation = "1.9.0"
plotters = "0.3"
itertools = "0.10.4"
stop-words = "0.2.1"
